--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,11 +1,12 @@
 ## database instance
 sql-server=basketball-booking-db
-sql-db=basketball-booking-db
-sql-username=basketball-booking-db-admin@basketball-booking-db
+sql-db=BasketballBooking
+sql-username=basketball-booking-db-admin
 sql-password=Strongpassword2020
 
 ## database config
-spring.datasource.url=jdbc:sqlserver:://${sql-server}.database.windows.net:1433;database=${sql-db};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=${sql-username}@${sql-server}
-spring.datasource.password=${sql-password}
+spring.datasource.url=jdbc:sqlserver://${sql-server}.database.windows.net:1433;database=${sql-db};user=${sql-username}@${sql-server};password=${sql-password};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+## api config
+server.port = 8080
