--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.datasource.url=jdbc:sqlserver://${sql-server}.database.windows.net:1433;d
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 ## api config
-server.port = 8080
+server.port=8080
+
+## openAPI config
+springdoc.swagger-ui.path=/swagger-ui.html
