--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 group = 'com.basketballbooking'
 version = '0.0.1'
 sourceCompatibility = '11'
+targetCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -17,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+	implementation('org.springdoc:springdoc-openapi-ui:1.4.3')
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
